2017-08-08 gr-main/src/gen.gr.parser.output
Terminals unused in grammar

   AST_STATEMENTS


Grammar

    0 $accept: program $end

    1 primary_expression: AST_INT_LITERAL
    2                   | AST_IDENTIFIER
    3                   | '(' expression ')'

    4 unary_expression: primary_expression
    5                 | '-' primary_expression
    6                 | '+' primary_expression

    7 multiplicative_expression: unary_expression
    8                          | multiplicative_expression '*' unary_expression
    9                          | multiplicative_expression '/' unary_expression
   10                          | multiplicative_expression '%' unary_expression

   11 additive_expression: multiplicative_expression
   12                    | additive_expression '+' multiplicative_expression
   13                    | additive_expression '-' multiplicative_expression

   14 assignment_expression: AST_IDENTIFIER '=' additive_expression
   15                      | AST_IDENTIFIER '=' assignment_expression

   16 expression: additive_expression
   17           | assignment_expression

   18 print_statement: AST_PRINT expression
   19                | AST_PRINTLN expression

   20 statement: assignment_expression
   21          | print_statement

   22 statement_list: statement
   23               | statement_list statement

   24 program: %empty
   25        | statement_list


Terminals, with rules where they appear

$end (0) 0
'%' (37) 10
'(' (40) 3
')' (41) 3
'*' (42) 8
'+' (43) 6 12
'-' (45) 5 13
'/' (47) 9
'=' (61) 14 15
error (256)
AST_INT_LITERAL (258) 1
AST_IDENTIFIER (259) 2 14 15
AST_STATEMENTS (260)
AST_PRINT (261) 18
AST_PRINTLN (262) 19


Nonterminals, with rules where they appear

$accept (16)
    on left: 0
primary_expression (17)
    on left: 1 2 3, on right: 4 5 6
unary_expression (18)
    on left: 4 5 6, on right: 7 8 9 10
multiplicative_expression (19)
    on left: 7 8 9 10, on right: 8 9 10 11 12 13
additive_expression (20)
    on left: 11 12 13, on right: 12 13 14 16
assignment_expression (21)
    on left: 14 15, on right: 15 17 20
expression (22)
    on left: 16 17, on right: 3 18 19
print_statement (23)
    on left: 18 19, on right: 21
statement (24)
    on left: 20 21, on right: 22 23
statement_list (25)
    on left: 22 23, on right: 23 25
program (26)
    on left: 24 25, on right: 0


State 0

    0 $accept: . program $end

    AST_IDENTIFIER  shift, and go to state 1
    AST_PRINT       shift, and go to state 2
    AST_PRINTLN     shift, and go to state 3

    $default  reduce using rule 24 (program)

    assignment_expression  go to state 4
    print_statement        go to state 5
    statement              go to state 6
    statement_list         go to state 7
    program                go to state 8


State 1

   14 assignment_expression: AST_IDENTIFIER . '=' additive_expression
   15                      | AST_IDENTIFIER . '=' assignment_expression

    '='  shift, and go to state 9


State 2

   18 print_statement: AST_PRINT . expression

    AST_INT_LITERAL  shift, and go to state 10
    AST_IDENTIFIER   shift, and go to state 11
    '('              shift, and go to state 12
    '-'              shift, and go to state 13
    '+'              shift, and go to state 14

    primary_expression         go to state 15
    unary_expression           go to state 16
    multiplicative_expression  go to state 17
    additive_expression        go to state 18
    assignment_expression      go to state 19
    expression                 go to state 20


State 3

   19 print_statement: AST_PRINTLN . expression

    AST_INT_LITERAL  shift, and go to state 10
    AST_IDENTIFIER   shift, and go to state 11
    '('              shift, and go to state 12
    '-'              shift, and go to state 13
    '+'              shift, and go to state 14

    primary_expression         go to state 15
    unary_expression           go to state 16
    multiplicative_expression  go to state 17
    additive_expression        go to state 18
    assignment_expression      go to state 19
    expression                 go to state 21


State 4

   20 statement: assignment_expression .

    $default  reduce using rule 20 (statement)


State 5

   21 statement: print_statement .

    $default  reduce using rule 21 (statement)


State 6

   22 statement_list: statement .

    $default  reduce using rule 22 (statement_list)


State 7

   23 statement_list: statement_list . statement
   25 program: statement_list .

    AST_IDENTIFIER  shift, and go to state 1
    AST_PRINT       shift, and go to state 2
    AST_PRINTLN     shift, and go to state 3

    $default  reduce using rule 25 (program)

    assignment_expression  go to state 4
    print_statement        go to state 5
    statement              go to state 22


State 8

    0 $accept: program . $end

    $end  shift, and go to state 23


State 9

   14 assignment_expression: AST_IDENTIFIER '=' . additive_expression
   15                      | AST_IDENTIFIER '=' . assignment_expression

    AST_INT_LITERAL  shift, and go to state 10
    AST_IDENTIFIER   shift, and go to state 11
    '('              shift, and go to state 12
    '-'              shift, and go to state 13
    '+'              shift, and go to state 14

    primary_expression         go to state 15
    unary_expression           go to state 16
    multiplicative_expression  go to state 17
    additive_expression        go to state 24
    assignment_expression      go to state 25


State 10

    1 primary_expression: AST_INT_LITERAL .

    $default  reduce using rule 1 (primary_expression)


State 11

    2 primary_expression: AST_IDENTIFIER .
   14 assignment_expression: AST_IDENTIFIER . '=' additive_expression
   15                      | AST_IDENTIFIER . '=' assignment_expression

    '='  shift, and go to state 9

    $default  reduce using rule 2 (primary_expression)


State 12

    3 primary_expression: '(' . expression ')'

    AST_INT_LITERAL  shift, and go to state 10
    AST_IDENTIFIER   shift, and go to state 11
    '('              shift, and go to state 12
    '-'              shift, and go to state 13
    '+'              shift, and go to state 14

    primary_expression         go to state 15
    unary_expression           go to state 16
    multiplicative_expression  go to state 17
    additive_expression        go to state 18
    assignment_expression      go to state 19
    expression                 go to state 26


State 13

    5 unary_expression: '-' . primary_expression

    AST_INT_LITERAL  shift, and go to state 10
    AST_IDENTIFIER   shift, and go to state 27
    '('              shift, and go to state 12

    primary_expression  go to state 28


State 14

    6 unary_expression: '+' . primary_expression

    AST_INT_LITERAL  shift, and go to state 10
    AST_IDENTIFIER   shift, and go to state 27
    '('              shift, and go to state 12

    primary_expression  go to state 29


State 15

    4 unary_expression: primary_expression .

    $default  reduce using rule 4 (unary_expression)


State 16

    7 multiplicative_expression: unary_expression .

    $default  reduce using rule 7 (multiplicative_expression)


State 17

    8 multiplicative_expression: multiplicative_expression . '*' unary_expression
    9                          | multiplicative_expression . '/' unary_expression
   10                          | multiplicative_expression . '%' unary_expression
   11 additive_expression: multiplicative_expression .

    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32

    $default  reduce using rule 11 (additive_expression)


State 18

   12 additive_expression: additive_expression . '+' multiplicative_expression
   13                    | additive_expression . '-' multiplicative_expression
   16 expression: additive_expression .

    '-'  shift, and go to state 33
    '+'  shift, and go to state 34

    $default  reduce using rule 16 (expression)


State 19

   17 expression: assignment_expression .

    $default  reduce using rule 17 (expression)


State 20

   18 print_statement: AST_PRINT expression .

    $default  reduce using rule 18 (print_statement)


State 21

   19 print_statement: AST_PRINTLN expression .

    $default  reduce using rule 19 (print_statement)


State 22

   23 statement_list: statement_list statement .

    $default  reduce using rule 23 (statement_list)


State 23

    0 $accept: program $end .

    $default  accept


State 24

   12 additive_expression: additive_expression . '+' multiplicative_expression
   13                    | additive_expression . '-' multiplicative_expression
   14 assignment_expression: AST_IDENTIFIER '=' additive_expression .

    '-'  shift, and go to state 33
    '+'  shift, and go to state 34

    $default  reduce using rule 14 (assignment_expression)


State 25

   15 assignment_expression: AST_IDENTIFIER '=' assignment_expression .

    $default  reduce using rule 15 (assignment_expression)


State 26

    3 primary_expression: '(' expression . ')'

    ')'  shift, and go to state 35


State 27

    2 primary_expression: AST_IDENTIFIER .

    $default  reduce using rule 2 (primary_expression)


State 28

    5 unary_expression: '-' primary_expression .

    $default  reduce using rule 5 (unary_expression)


State 29

    6 unary_expression: '+' primary_expression .

    $default  reduce using rule 6 (unary_expression)


State 30

    8 multiplicative_expression: multiplicative_expression '*' . unary_expression

    AST_INT_LITERAL  shift, and go to state 10
    AST_IDENTIFIER   shift, and go to state 27
    '('              shift, and go to state 12
    '-'              shift, and go to state 13
    '+'              shift, and go to state 14

    primary_expression  go to state 15
    unary_expression    go to state 36


State 31

    9 multiplicative_expression: multiplicative_expression '/' . unary_expression

    AST_INT_LITERAL  shift, and go to state 10
    AST_IDENTIFIER   shift, and go to state 27
    '('              shift, and go to state 12
    '-'              shift, and go to state 13
    '+'              shift, and go to state 14

    primary_expression  go to state 15
    unary_expression    go to state 37


State 32

   10 multiplicative_expression: multiplicative_expression '%' . unary_expression

    AST_INT_LITERAL  shift, and go to state 10
    AST_IDENTIFIER   shift, and go to state 27
    '('              shift, and go to state 12
    '-'              shift, and go to state 13
    '+'              shift, and go to state 14

    primary_expression  go to state 15
    unary_expression    go to state 38


State 33

   13 additive_expression: additive_expression '-' . multiplicative_expression

    AST_INT_LITERAL  shift, and go to state 10
    AST_IDENTIFIER   shift, and go to state 27
    '('              shift, and go to state 12
    '-'              shift, and go to state 13
    '+'              shift, and go to state 14

    primary_expression         go to state 15
    unary_expression           go to state 16
    multiplicative_expression  go to state 39


State 34

   12 additive_expression: additive_expression '+' . multiplicative_expression

    AST_INT_LITERAL  shift, and go to state 10
    AST_IDENTIFIER   shift, and go to state 27
    '('              shift, and go to state 12
    '-'              shift, and go to state 13
    '+'              shift, and go to state 14

    primary_expression         go to state 15
    unary_expression           go to state 16
    multiplicative_expression  go to state 40


State 35

    3 primary_expression: '(' expression ')' .

    $default  reduce using rule 3 (primary_expression)


State 36

    8 multiplicative_expression: multiplicative_expression '*' unary_expression .

    $default  reduce using rule 8 (multiplicative_expression)


State 37

    9 multiplicative_expression: multiplicative_expression '/' unary_expression .

    $default  reduce using rule 9 (multiplicative_expression)


State 38

   10 multiplicative_expression: multiplicative_expression '%' unary_expression .

    $default  reduce using rule 10 (multiplicative_expression)


State 39

    8 multiplicative_expression: multiplicative_expression . '*' unary_expression
    9                          | multiplicative_expression . '/' unary_expression
   10                          | multiplicative_expression . '%' unary_expression
   13 additive_expression: additive_expression '-' multiplicative_expression .

    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32

    $default  reduce using rule 13 (additive_expression)


State 40

    8 multiplicative_expression: multiplicative_expression . '*' unary_expression
    9                          | multiplicative_expression . '/' unary_expression
   10                          | multiplicative_expression . '%' unary_expression
   12 additive_expression: additive_expression '+' multiplicative_expression .

    '*'  shift, and go to state 30
    '/'  shift, and go to state 31
    '%'  shift, and go to state 32

    $default  reduce using rule 12 (additive_expression)
